--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Martel+Sans:wght@200&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;800;900&display=swap" rel="stylesheet">
   <link
     href="https://fonts.googleapis.com/css2?family=Londrina+Outline&family=Londrina+Solid&family=Quicksand:wght@300;400;500;600;700&display=swap"
     rel="stylesheet">
